# synthetic-vcf-generator

./: .pre-commit-config.yaml  README.md  pylock.toml  pyproject.toml
examples/: README.md  generate-batch.sh  generate.sh  import-reference.sh  reference-generate-batch.sh  reference-generate.sh
src/synthetic_vcf_generator/: __init__.py  __main__.py  variant_types.py  vcf_generator.py  vcf_reference.py  virtual_vcf.py
tests/: test_cli.py  test_variant_types.py  test_vcf_generator.py  test_vcf_reference.py  test_vcf_validator.py  test_virtual_vcf.py
tests/test_data/: chr1_small.vcf  chr2_small.vcf
tests/test_data/reference/parquet/: sequence_metadata.json
tests/test_data/reference/seq/: fasta_chr1.seq  fasta_chr10.seq  fasta_chr2.seq  fasta_chr3.seq  fasta_chr4.seq  fasta_chr5.seq  fasta_chr6.seq  fasta_chr7.seq  fasta_chr8.seq  fasta_chr9.seq  sequence_metadata.json
