[project]
name = "synthetic-vcf-generator"
version = "0.1.0"
description = "A Python package for generating synthetic Variant Call Format (VCF) files"
authors = [
    {name = "Alan Cleary"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
